apps/kube-prometheus-stack/ingress.yaml
# Grafana IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.homelab.azuanz.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: homelab-certificate-secret

---
# Prometheus IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.homelab.azuanz.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls:
    secretName: homelab-certificate-secret

---
# Alertmanager IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.homelab.azuanz.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
  tls:
    secretName: homelab-certificate-secret
